# multi-agent

./: .gitignore  pyproject.toml  requirements.txt
docs/: getting_started.md
examples/: content_creation.py  data_analysis.py  example.py  market_research.py
examples/advanced/: autonomous_research.py  content_pipeline.py  real_time_monitor.py
src/agentic/: __init__.py  agent_flow.py
src/agentic/agents/: base.py  manager.py
src/agentic/agents/implementations/: analyst.py  researcher.py  validator.py  writer.py
src/agentic/cli/: config_example.yaml  main.py
src/agentic/cli/templates/: plugin.py.template  tool.py.template
src/agentic/communication/: base.py
src/agentic/config/: defaults.py  settings.py
src/agentic/core/: analyzer.py  executor.py  orchestrator.py
src/agentic/llm/: base.py
src/agentic/llm/providers/: anthropic.py  async_openai.py  azure.py  gemini.py  openai.py
src/agentic/memory/: base.py  local_memory.py  redis_store.py
src/agentic/plugins/: base.py  registry.py  seo_optimizer.py
src/agentic/plugins/implementations/: content_optimizer.py  fact_checker.py
src/agentic/tools/: base.py  registry.py
src/agentic/tools/implementations/: content_generator.py  data_analysis.py  visualization.py  web_search.py
src/agentic/utils/: __init__.py  helpers.py  logger.py
tests/: conftest.py  memory.py  test_framwork.py
