[tool.poetry]
name = "multi-agent"
version = "0.1.0"
description = "Create multi-agent workflow for solving tasks"
authors = ["Gourab Sinha <gourab19964u@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
] # This is the correct way to include packages

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.0"
openai = "^1.12.0"
anthropic = "^0.8.0"
google-generativeai = "^0.3.0"
transformers = "^4.38.0"
torch = "^2.2.0"
redis = "^5.0.0"
aiohttp = "^3.9.0"
pandas = "^2.2.0"
numpy = "^1.24.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]  # Updated syntax for dev dependencies
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"